# maxhub-a3

./: .editorconfig  .gitattributes  .gitignore  README.md  README_getting_started.md  README_ros_noetic.md  README_ubuntu.md
docs/calibration/printables/: README.md
workspace/ubuntu/: README.md  environment.yml  requirements.txt
workspace/ubuntu/carm_ws/src/carm_a3_bringup/: CMakeLists.txt  README.md  package.xml
workspace/ubuntu/carm_ws/src/carm_a3_bringup/launch/: handeye_validation.launch  readonly_vision_handeye.launch
workspace/ubuntu/carm_ws/src/carm_a3_calibration/: CMakeLists.txt  README.md  package.xml
workspace/ubuntu/carm_ws/src/carm_a3_calibration/config/: handeye_flange_camera.yaml
workspace/ubuntu/carm_ws/src/carm_a3_calibration/launch/: aruco_handeye_sampler.launch  publish_handeye_tf.launch
workspace/ubuntu/carm_ws/src/carm_a3_calibration/scripts/: aruco_handeye_sampler.py  solve_handeye.py
workspace/ubuntu/carm_ws/src/carm_a3_description/: CMakeLists.txt  README.md  package.xml
workspace/ubuntu/carm_ws/src/carm_a3_description/bind/: joints_bind.json
workspace/ubuntu/carm_ws/src/carm_a3_description/launch/: display.launch  robot_state_publisher.launch
workspace/ubuntu/carm_ws/src/carm_a3_description/meshes/: base_link.STL  gripper.STL  gripper_base.STL  gripper_left.STL  gripper_right.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  payload.STL
workspace/ubuntu/carm_ws/src/carm_a3_description/urdf/: carm_a3.urdf  default.rviz
workspace/ubuntu/carm_ws/src/carm_a3_driver/: CMakeLists.txt  README.md  package.xml
workspace/ubuntu/carm_ws/src/carm_a3_driver/config/: robot.yaml
workspace/ubuntu/carm_ws/src/carm_a3_driver/launch/: readonly_state.launch
workspace/ubuntu/carm_ws/src/carm_a3_driver/src/: readonly_state_node.cpp
workspace/ubuntu/carm_ws/src/carm_a3_motion/: CMakeLists.txt  README.md  package.xml
workspace/ubuntu/carm_ws/src/carm_a3_motion/config/: motion.yaml
workspace/ubuntu/carm_ws/src/carm_a3_motion/launch/: official_topic_motion.launch  py_ws_motion.launch  raw_ws_motion.launch  safe_motion.launch
workspace/ubuntu/carm_ws/src/carm_a3_motion/scripts/: motion_cli.py  py_ws_motion_node.py  raw_ws_motion_node.py
workspace/ubuntu/carm_ws/src/carm_a3_motion/src/: official_topic_motion_node.cpp  safe_motion_node.cpp
workspace/ubuntu/carm_ws/src/carm_a3_motion/srv/: GetCartesianSnapshot.srv  GetExtendedState.srv  GetJointSnapshot.srv  GetToolInfo.srv  JogJoint.srv  MoveFlowPose.srv  MoveJoint.srv  MoveJointTrajectory.srv  MoveLineJoint.srv  MoveLinePose.srv  MovePose.srv  SetCollisionConfig.srv  SetGripper.srv  SetSpeed.srv  SolveFK.srv  SolveFKArray.srv  SolveIK.srv  SolveIKArray.srv
workspace/ubuntu/carm_ws/src/carm_a3_perception/: CMakeLists.txt  README.md  package.xml
workspace/ubuntu/carm_ws/src/carm_a3_perception/config/: color_blocks.yaml
workspace/ubuntu/carm_ws/src/carm_a3_perception/launch/: color_blocks.launch
workspace/ubuntu/carm_ws/src/carm_a3_perception/scripts/: color_block_segmenter.py
workspace/ubuntu/carm_ws/src/carm_a3_tasks/: CMakeLists.txt  README.md  package.xml
workspace/ubuntu/carm_ws/src/carm_a3_tasks/config/: block_grasp.yaml  grasp_init.yaml
workspace/ubuntu/carm_ws/src/carm_a3_tasks/launch/: block_grasp.launch  grasp_init.launch  pregrasp_overview.launch
workspace/ubuntu/carm_ws/src/carm_a3_tasks/scripts/: block_grasp.py  grasp_init.py
workspace/ubuntu/carm_ws/src/carm_a3_vision/: CMakeLists.txt  README.md  package.xml
workspace/ubuntu/carm_ws/src/carm_a3_vision/config/: camera.yaml  camera_info.yaml
workspace/ubuntu/carm_ws/src/carm_a3_vision/launch/: camera.launch
workspace/ubuntu/carm_ws/src/carm_a3_vision/src/: v4l2_camera_node.cpp
workspace/ubuntu/config/: robot.yaml
workspace/ubuntu/scripts/: check_network.py  inspect_carm_sdk.py
