<?xml version="1.0"?>
<package format="2">
  <name>carm_a3_perception</name>
  <version>0.1.0</version>
  <description>Traditional perception nodes for CArm / MAXHUB A3 block detection.</description>

  <maintainer email="noetic@todo.invalid">noetic</maintainer>
  <license>UNLICENSED</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
