<?xml version="1.0"?>
<package format="2">
  <name>carm_a3_tasks</name>
  <version>0.1.0</version>
  <description>Task-level helpers for CArm / MAXHUB A3 grasp preparation.</description>

  <maintainer email="noetic@todo.invalid">noetic</maintainer>
  <license>UNLICENSED</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>carm_a3_motion</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>carm_a3_motion</exec_depend>
  <exec_depend>carm_a3_bringup</exec_depend>
  <exec_depend>carm_a3_calibration</exec_depend>
  <exec_depend>carm_a3_perception</exec_depend>
  <exec_depend>carm_a3_vision</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
